--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ section {
                 </div>
                 <div class="info">
                     <h3>Email</h3>
-                 <a href="iemand411@gmail.com"><p>iemand411@gmail.com</p></a>  
+                 <a href="supeeeer411@gmail.com"><p>supeeeer411@gmail.com</p></a>  
                 </div>
             </div>
         </div>
@@ -414,9 +414,7 @@ section {
         <p class="footer-title">Copyrights © <span>Mohamed Ali</span></p>
         <div class="social-icons">
             <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            
         </div>
     </footer>
     
