--- a/index.html
+++ b/index.html
@@ -414,7 +414,9 @@ section {
         <p class="footer-title">Copyrights © <span>Mohamed Ali</span></p>
         <div class="social-icons">
             <a href="#"><i class="fab fa-linkedin"></i></a>
-            
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
     
