--- a/index.html
+++ b/index.html
@@ -361,13 +361,13 @@ section {
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <a href="https://codepen.io/supeer411/full/gOGpjVz"><img src="m1.png" /></a>
+                    <a href="https://mohamed-ali-home-town.netlify.app/"><img src="m1.png" /></a>
                 </div>
                 
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <a href="https://codepen.io/supeer411/full/MWoXqZQ"><img src="m2.png" /> </a>
+                    <a href="https://mohamed-ali-business-card.netlify.app/"><img src="m2.png" /> </a>
                 </div>
                 
             </div>
