--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ section {
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <a href=" https://moali.netlify.app/"><img src="m3.png" /></a>
+                    <a href=" https://mohamed-ali-personal-page.netlify.app/"><img src="m3.png" /></a>
                 </div>
                 
             </div>
