--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ section {
     
 }
 		:root {
-  --bg-color: #ffffff;
+  --bg-color: #b4b2b0;
   --text-color: #212121;
 }
 [data-theme="dark"] {
