--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ section {
 }
 [data-theme="dark"] {
   --bg-color: #121212;
-  --text-color: ;#b4b2b0;
+  --text-color: #b4b2b0;
 }
 body {
   color: var(--text-color);
