--- a/index.html
+++ b/index.html
@@ -331,8 +331,7 @@ section {
 }
 [data-theme="dark"] {
   --bg-color: #121212;
-  --text-color: #b4b2b0;
-}
+  --text-color: white;
 body {
   color: var(--text-color);
   background-color: var(--bg-color);
@@ -340,8 +339,8 @@ body {
 }
 .container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: right;
+  align-items: right;
   height: 80vh;
 }
 .toggle-button {
