--- a/index.html
+++ b/index.html
@@ -333,14 +333,12 @@ section {
   --bg-color: #121212;
   --text-color: white;
 body {
-  color: var(--text-color);
+  color: white;
   background-color: var(--bg-color);
   font-family: "Playfair Display";
 }
 .container {
-  display: flex;
-  justify-content: right;
-  align-items: right;
+  
   height: 80vh;
 }
 .toggle-button {
