--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@ body {
   font-family: "Playfair Display";
 }
 .container {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 80vh;
 }
 .toggle-button {
