--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@ section {
     
 }
 		:root {
-            --bg-color: #7d91e9;
+            --bg-color: #b4b2b0;
             --text-color: #e20404;
           }
           [data-theme="dark"] {
-            --bg-color: #e43636;
+            --bg-color: #1b0e0e;
             --text-color:white;
           }
           body {
