--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@ section {
             --text-color: #e20404;
           }
           [data-theme="dark"] {
-            --bg-color: #1b0e0e;
+            --bg-color: hsla(262, 100%, 62%, 1);
+
             --text-color:white;
           }
           body {
@@ -340,7 +341,6 @@ section {
           }
           .container {
             display: flex;
-            justify-content: right;
             align-items: right;
             height: 80vh;
           }
