--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ section {
             --text-color: #e20404;
           }
           [data-theme="dark"] {
-            --bg-color: hsla(262, 100%, 62%, 1);
+            --bg-color: var(--theme-color--paper);
 
             --text-color:white;
           }
@@ -341,7 +341,7 @@ section {
           }
           .container {
             display: flex;
-            align-items: right;
+            align-items: left;
             height: 80vh;
           }
           .toggle-button {
