--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ section {
             --text-color: #e20404;
           }
           [data-theme="dark"] {
-            --bg-color: var(--theme-color--paper);
+           background-color: var(--theme-color--)
 
             --text-color:white;
           }
