--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ section {
             --text-color: #e20404;
           }
           [data-theme="dark"] {
-           background-color: var(--theme-color--)
+           --bg-color: #372647;
 
             --text-color:white;
           }
