--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@ section {
             
           }
           body {
-            color: var(--text-color);
+            color: white;
             background-color: var(--bg-color);
             font-family: "Playfair Display";
           }
           .container {
             display: flex;
-            align-items: left;
+            align-items: bottom;
             height: 80vh;
           }
           .toggle-button {
