--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ section {
 .main h2 span {
     display: inline-block;
     margin-top: 10px;
-    color: #070808;
+    color: white
     font-size: 1em;
     font-weight: 250;
 }
