--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ section {
 }
 
 .main h2 {
-    color: #022d61;
+    color: white;
     font-size: 3.1em;
     font-weight: 800;
     
@@ -341,7 +341,6 @@ section {
           }
           .container {
             display: flex;
-            align-items: bottom;
             height: 80vh;
           }
           .toggle-button {
