--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ section {
 .mo{
     display: flex;
     justify-content: center;
-    color: #010e33;
+    color: white
     font-size: 2.2em;
     font-weight: 800;
     margin-bottom: 30px;
@@ -342,6 +342,7 @@ section {
           .container {
             display: flex;
             height: 80vh;
+	    marging-left: 51px;
           }
           .toggle-button {
             -webkit-appearance: none;
