--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@ section {
     
 }
 		:root {
-            --bg-color: #b4b2b0;
+            --bg-color: #8d79a0;
             --text-color: #e20404;
           }
            [data-theme="dark"] {
-            --bg-color: #372647;
+            --bg-color: #121212;
             --text-color:white;
             
           }
@@ -342,7 +342,7 @@ section {
           .container {
             display: flex;
             height: 80vh;
-	    marging-left: 51px;
+	    justify-content: right;
           }
           .toggle-button {
             -webkit-appearance: none;
