--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ section {
     
 }
 		:root {
-            --bg-color: #8d79a0;
+            --bg-color: #3e77e0;
             --text-color: #e20404;
           }
            [data-theme="dark"] {
@@ -343,6 +343,7 @@ section {
             display: flex;
             height: 80vh;
 	    justify-content: right;
+	    position: fixed;
           }
           .toggle-button {
             -webkit-appearance: none;
