--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ section {
             font-family: "Playfair Display";
           }
           .container {
-        
+            position: fixed;
             height: 80vh;
 	    justify-content: right;
 	    
