--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@ section {
             font-family: "Playfair Display";
           }
           .container {
+            display: flex;
             height: 80vh;
 	    justify-content: right;
 	    
