--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ section {
 }
 
 .main h2 {
-    color: white;
+    color: rgb(134, 122, 122);
     font-size: 3.1em;
     font-weight: 800;
     
@@ -83,7 +83,7 @@ section {
 .main h2 span {
     display: inline-block;
     margin-top: 10px;
-    color: white
+    color: rgb(134, 122, 122);
     font-size: 1em;
     font-weight: 250;
 }
