--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ section {
           .container {
             display: flex;
             height: 80vh;
-	    justify-content: left;
+	    justify-content: right;
 	    
           }
           .toggle-button {
